--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
  
     setInterval(dasdlasjl, 1000);
-	setInterval(iretpoiçlk, 500);
+	  setInterval(iretpoiçlk, 500);
 	
   </script>
       <div id="e0" style="position:absolute;left:9;top:9;width:77;height:80;"><img src="images/Cutout_2.gif" width="77" height="80" border="0" alt="elektronikk,lysorgel,kamera,oversetter"></a></div>      <div id="e1" style="position:absolute;left:545;top:11;width:240;height:104;"><!--$img %ImageAssetImpl:/Cutout_1.jpgskycom2.jpg$--><img src="images/Cutout_1.jpgskycom2-240x104.jpg" width="240" height="104" border="0" alt="elektronikk,lysorgel,kamera,oversetter"></a></div>      <div id="e2" style="position:absolute;left:707;top:47;width:133;height:18;"><span class="text"><font size="2"><span style="font-size:12px;line-height:15px;">< </span></font><font size="2"><span style="font-size:12px;line-height:15px;">Frithjof i sin Fly-Bil<br soft></span></font></a></span>      </div>
@@ -643,9 +643,9 @@ $--><!--$begin exclude$--><img src="http://visit.webhosting.luminate.com/counter
           </tr>
         </tbody></table>
       </div>
-	  <div id="nonSenseText">Actp já!</div>
+	  <div id="nonSenseText"><a href="#" onclick="hjksjsal()">Actp já!</a></div>
 	  
-	  <div id="nonSenseText2">Clik Da!</div>
+	  <div id="nonSenseText2"><a href="alt.html">Clik Da!</a></div>
       <div id="e653" style="position:absolute;left:277;top:394;width:4;height:130;"><img src="images/aboutme_classic_vertline.gif" width="4" height="130" alt></div>      <div id="e654" style="position:absolute;left:499;top:498;width:144;height:41;"><span class="text"><b><font size="2"><span style="font-size:14px;line-height:17px;">el-bil (Sertifikat-fri)<br></span></font></b><font size="2"><span style="font-size:14px;line-height:17px;">3-hjul</span></font><font size="2"><span style="font-size:12px;line-height:15px;">   kr. </span></font><b><font color="#FF3300" size="2"><span style="font-size:14px;line-height:17px;">3</span></font></b></a><b><font color="#FF3300" size="2"><span style="font-size:14px;line-height:17px;">9</span></font></b></a><b><font color="#FF3300" size="2"><span style="font-size:14px;line-height:17px;">.998,-<br soft></span></font></b></a></span>      </div>
       <div id="e655" style="position:absolute;left:650;top:782;width:163;height:104;"><!--$img %ImageAssetImpl:/images/pedal-gokart-mercedesgocartred-p.jpg$--><img src="images/nanan.jfif" width="163" height="104" border="0" alt></a></div>      <div id="e656" style="position:absolute;left:652;top:780;width:167;height:18;"><span class="text"><b><font size="2"><span style="font-size:14px;line-height:17px;">Pedal-GoKart</span></font></b><font size="2"><span style="font-size:14px;line-height:17px;"> Mercedes<br soft></span></font></span>      </div>
       <div id="e657" style="position:absolute;left:657;top:865;width:59;height:22;"><span class="text"><b><font color="#FF3300" size="2"><span style="font-size:14px;line-height:17px;">1.998,-<br soft></span></font></b></a></span>      </div>
@@ -756,6 +756,10 @@ function nada() {
 
 function myFunction() {
   alert('a');
+}
+
+function hjksjsal() {
+  alert('HA!')
 }
 
 document.getElementById('container').addEventListener("mousemove", function (e) {
